// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/ruby-version/extract extractPackageFile() returns a result 1`] = `
Array [
  Object {
    "currentValue": "8.4.0",
    "datasource": "rubyVersion",
    "depName": "ruby",
    "purl": "pkg:ruby-version",
  },
]
`;

exports[`lib/manager/ruby-version/extract extractPackageFile() skips non ranges 1`] = `
Array [
  Object {
    "currentValue": "latestn",
    "datasource": "rubyVersion",
    "depName": "ruby",
    "purl": "pkg:ruby-version",
    "skipReason": "unsupported-version",
  },
]
`;

exports[`lib/manager/ruby-version/extract extractPackageFile() supports ranges 1`] = `
Array [
  Object {
    "currentValue": "8.4",
    "datasource": "rubyVersion",
    "depName": "ruby",
    "purl": "pkg:ruby-version",
  },
]
`;
